Added sim data retrieval
